quick spacing fix

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -101,7 +101,7 @@ a {
 
 .sponsors {
 	text-align: center;
-	padding: 10px 0px;
+	padding-bottom: 20px;
 }
 
 .date {
